# data-dot-gov

./: .env.example  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  Makefile.docker  NEW_SOURCES.md  PROJECT_STRUCTURE.md  Pipfile  README.md  TODO1.md  TODO3.md  TRENDS_TAB_IMPLEMENTATION_REPORT.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  regenerate_bills_index.py  setup.cfg  test-bills.js  test-trends-tab.js  test_frontend_validation.js  test_frontend_validation_simple.js
.github/workflows/: code-quality.yml  deploy.yml
backend/: Dockerfile  main.py  requirements.txt
backend/models/: __init__.py  committee.py
backend/routers/: __init__.py  committees.py
backend/services/: __init__.py  cache_service.py  committee_service.py
backend/utils/: __init__.py  cache_utils.py  congress_api.py
config/: redis.conf
db/: pgadmin-servers.json  schema.sql
db/init-scripts/: 03-performance-tuning.sql
db/migrations/: 001_initial_schema.sql
docker/nginx/: default.conf  gzip.conf  nginx.conf  security-headers.conf
docs/: deployment-2024-12-27.md  index.md
docs/api/: data-needs.md
docs/architecture/: database.md
docs/deployment/: api-configuration.md  deployment.md
docs/development/: cleanup.md  code-quality.md  linting-setup.md
docs/features/: committee-frontend-plan.md  historical-data.md  member-consistency.md
docs/fixes/: issue-7-committee-timeout.md  issue-8-members-page-no-data.md
docs/getting-started/: quick-start.md
docs/planning/: phase2.md  phase3.md
docs/reference/: claude-ai.md  terms-of-service.md
docs/reports/: congress-v1.md  consolidated-modules-test.md  consolidation-report.md  core-package-summary.md  pydantic-models.md  react-viewer-validation.md  senate-v1.md  voting-analysis-summary.md
frontend/: .env.production  .lintstagedrc.json  .prettierrc.json  Dockerfile  FEATURES.md  TEST_SUMMARY.md  debug-navigation.cjs  eslint.config.js  final-trends-test.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  quick-trends-test.cjs  tailwind.config.js  test-committee-detail.cjs  test-party-comparison-direct.cjs  test-results.json  test-runner.cjs  test-trends-tab.cjs  trends-tab-comprehensive-test-localhost.cjs  trends-tab-comprehensive-test.cjs  trends-validation-test.cjs  tsconfig.json  vite.config.js
frontend/docker/nginx/: default.conf  gzip.conf  nginx.conf  security-headers.conf
frontend/public/analysis/: comprehensive_report.json  data_summary.json
frontend/src/: App.css  App.jsx  App.tsx
frontend/src/components/: BillDetail.jsx  BillProgressBar.jsx  BillsAnalysis.jsx  CommitteeAnalyticsDashboard.jsx  CommitteeCard.jsx  CommitteeDetail.jsx  CommitteeDocuments.jsx  CommitteeHierarchy.jsx  CommitteeLeadership.jsx  CommitteeTimeline.jsx  CommitteeVoteChart.jsx  CommitteesList.jsx  CrossCommitteeMatrix.jsx  Dashboard.jsx  ErrorBoundary.tsx  HearingsList.jsx  Lobbying.jsx  MeetingsList.jsx  MemberDetail.jsx  MemberRoster.jsx  Members.jsx  PartyComparison.jsx  SubcommitteeDetail.jsx  TrendCharts.jsx  components.d.ts
frontend/src/services/: dataService.js  dataService.ts  optimizedDataService.js  pollerService.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: README.md  congress-platform.spec.ts  export-functionality.spec.ts  performance.spec.ts  test-utils.ts
poller/: Dockerfile  Dockerfile.migrate  __init__.py  analyze_bill_sponsors.py  analyze_bipartisan_cooperation.py  analyze_committees.py  analyze_legislative_activity.py  analyze_member_consistency.py  analyze_state_patterns.py  analyze_timeline.py  categorize_bills.py  comprehensive_analyzer.py  data_summary.py  fetch_committees.py  fetch_data.py  fetch_lobbying.py  fetch_members.py  fetch_members_votes.py  fetch_voting_records.py  generate_members_summary.py  generate_voting_patterns.py  gov_data_analyzer.py  gov_data_downloader.py  gov_data_downloader_v2.py  historical_data_fetcher.py  requirements.txt  scheduler.py  smart_fetch.py  sync_viewer_data.py  test_results.json
poller/analyzers/: __init__.py  geographic_analytics.py  orchestrator.py  party_analytics.py  temporal_analytics.py  topic_analytics.py
poller/core/: __init__.py
poller/core/api/: __init__.py  base.py  congress.py  rate_limiter.py  senate.py
poller/core/models/: __init__.py  base.py  bill.py  committee.py  congress.py  enums.py  lobbying.py  member.py  senate.py  vote.py
poller/core/storage/: __init__.py  compressed.py  database.py  file_storage.py
poller/fetchers/: __init__.py  specialized_fetcher.py  unified_fetcher.py
poller/migrations/: MIGRATION_REPORT.md  __init__.py  compatibility.py  update_imports.py  verify_migration.py
poller/tests/: database_setup.py  debug_storage.py  example_core_usage.py  run_all_tests.py  test_consolidated_modules.py  test_consolidation_validation.py  test_core_package.py  test_member_consistency.py  test_pydantic_models.py
scripts/: backup-prod.sh  backup.sh  deploy-production.sh  deploy-staging.sh  restore-prod.sh
(+15 files in other folders)
